@@ -146,10 +146,13 @@ UTILITIES
 	line feed.
 
     o   vignette() returns now objects of the same name, the print()
-        method opens the corresponidng PDF file. The edit() method can
+        method opens the corresponidng PDF file.  The edit() method can
         be used to open the code of the vignette in an editor.
 
     o	R CMD build now changes src files to LF line endings if necessary.
+
+    o	R CMD INSTALL on Unix has a new option '--build' matching 
+	that on Windows, to package as tarball the installed package.
 
 
 DOCUMENTATION
